--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <title> Projeto HTML</title>
     <meta charset='UTF-8'>
@@ -50,14 +51,14 @@
         <section>
             <h2 id="secondarySubtitle_h2">Isto é um h2 com o atributo id</h2>
             <p class="paragraph">Isto é um parágrafo que fala sobre a abreviação <span
-                    class="border_paragraph">HTML</span> e a importância do atributo <a
+                    class="border_paragraph">HTML</span> e a importância do atributo <code><a
                     href="https://html.spec.whatwg.org/multipage/dom.html#the-lang-and-xml:lang-attributes"
-                    title="lang">lang</a></p>
+                    title="lang">lang</a></code></p>
             <p class="paragraph">Este vídeo demonstra <a href="https://www.youtube.com/watch?v=NP94u7y_KkQ"
                     title="video leitor de tela">um leitor de
                     tela lendo uma página</a> sem o idioma definido.</p>
         </section><!-- fechamento section -->
-        
+
         <!-- Section -->
         <section>
             <h2 id="tertiarySubtitle_h2">Isto é um h2 com um id</h2>
@@ -70,6 +71,7 @@
             <hr>
         </section><!-- fechamento da section -->
     </main><!-- fechamento main-->
+
 </body>
 
 </html>
