--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <p class="paragraph"><a href="https://smartquotesforsmartpeople.com/" title="tipografia">Cuidado com a
                     tipografia.</a> Você
                 precisa ter atenção com as aspas que está usando também meu jovem!<br>E por favor, use fontes que não
-                sejam <em>Times New Roman</em> em seus projetos</p>
+                sejam <em>Times New Roman</em> em seus projetos.</p>
             <blockquote class="quote">"The Student searches the world for meaning. The master finds worlds of meaning
                 in the search."<span class="linha"> </span><cite>Unknown</cite></blockquote>
             <hr>
