--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <main>
         <!-- Section -->
         <section>
-            <h2 class="subtitle_h2">Isto é um h2 com um atributo id</h2>
+            <h2 id="primarySubtitle_h2">Isto é um h2 com um atributo id</h2>
             <p class="boldParagraph">Este parágrafo é importante, está em negrito e tem o seguinte trecho de código:
                 <code class="code">console.log('foobar')</code>
             </p>
@@ -43,13 +43,13 @@
 
         <!-- Section -->
         <section>
-            <h3 class="subtitle_h3">Isto é um h3 com o atributo id</h3>
+            <h3 id="primarySubtitle_h3">Isto é um h3 com o atributo id</h3>
             <p class="paragraph">Isto é um parágrafo</p>
         </section><!-- fechamento section -->
 
         <!-- Section -->
         <section>
-            <h2 class="subtitle_h2">Isto é um h2 com o atributo id</h2>
+            <h2 id="secondarySubtitle_h2">Isto é um h2 com o atributo id</h2>
             <p class="paragraph">Isto é um parágrafo que fala sobre a abreviação <span
                     class="border_paragraph">HTML</span> e a importância do atributo <code><a
                     href="https://html.spec.whatwg.org/multipage/dom.html#the-lang-and-xml:lang-attributes"
@@ -61,11 +61,11 @@
 
         <!-- Section -->
         <section>
-            <h2 class="subtitle_h2">Isto é um h2 com um id</h2>
+            <h2 id="tertiarySubtitle_h2">Isto é um h2 com um id</h2>
             <p class="paragraph"><a href="https://smartquotesforsmartpeople.com/" title="tipografia">Cuidado com a
                     tipografia.</a> Você
                 precisa ter atenção com as aspas que está usando também meu jovem!<br>E por favor, use fontes que não
-                sejam <em>Times New Roman</em> em seus projetos</p>
+                sejam <em>Times New Roman</em> em seus projetos.</p>
             <blockquote class="quote">"The Student searches the world for meaning. The master finds worlds of meaning
                 in the search."<span class="linha"> </span><cite>Unknown</cite></blockquote>
             <hr>
