--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
         <!-- Section -->
         <section>
             <h2 id="primarySubtitle_h2">Isto é um h2 com um atributo id</h2>
-            <p class="boldParagraph">Este parágrafo é importante, está em negrito e tem o seguinte trecho de código:
-                <code class="code">console.log('foobar')</code>
+            <p class="paragraph"><strong>Este parágrafo é importante, está em negrito e tem o seguinte trecho de código:
+                <code class="code">console.log('foobar')</code></strong>
             </p>
             <p class="paragraph">Este parágrafo contém um link para <a href="https://www.google.com.br/"
                     title="Site Google">https://www.google.com.br/</a></p>
